# instapay-eg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.md  contributing.md  index.md  installation.md  quickstart.md
docs/api-reference/: core.md  exceptions.md  integrations.md  security.md
docs/integrations/: django.md  pydantic.md  qrcode.md
docs/user-guide/: building-links.md  cli.md  parsing.md  qr-codes.md  security.md
src/instapay_eg/: __init__.py  cli.py  core.py  exceptions.py  security.py
src/instapay_eg/integrations/: __init__.py  django.py  pydantic.py  qrcode.py
tests/: conftest.py  test_cli.py  test_core.py  test_integrations.py  test_security.py
