[project]
name = "instapay-eg"
version = "0.1.1"
description = "Community SDK for parsing, validating, and generating Egyptian InstaPay payment links. Zero dependencies for the core API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mohamed Mostafa", email = "mohamedmostafa9557@gmail.com" }
]
keywords = [
    "instapay",
    "egypt",
    "payments",
    "fintech",
    "qr-code",
    "pydantic",
    "fastapi",
    "validation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://mohamedmostafa259.github.io/instapay-eg/"
Repository = "https://github.com/MohamedMostafa259/instapay-eg"
Documentation = "https://mohamedmostafa259.github.io/instapay-eg/"
"Bug Tracker" = "https://github.com/MohamedMostafa259/instapay-eg/issues"
Changelog = "https://github.com/MohamedMostafa259/instapay-eg/blob/main/CHANGELOG.md"

[project.scripts]
instapay = "instapay_eg.cli:main"

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0.0",
]
qrcode = [
    "segno>=1.6.6",
]
django = [
    "django>=3.2",
]
all = [
    "pydantic>=2.0.0",
    "segno>=1.6.6",
    "django>=3.2",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.29.0",
    "pip-audit>=2.0.0",
    "poethepoet>=0.25.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=instapay_eg",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=100",
]

[tool.coverage.run]
source = ["instapay_eg"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # assert used - acceptable in tests and frozen dataclasses
    "ARG001", # unused function argument - common in Pydantic validators
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PT019", "PT011"]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used - we use asserts in dataclasses

[tool.poe.tasks]
test    = "pytest tests/ -v -x --no-header -p no:cacheprovider"

format  = "ruff format ."
lint    = "ruff check . --fix"
typecheck = "ty check src/"
security = "bandit -r src -c pyproject.toml"
audit   = "pip-audit"
check-all = ["format", "lint", "typecheck", "security"]

setup   = "pre-commit install"
precommit = "pre-commit run --all-files"

docs    = "mkdocs serve"
